fix images and copy not showing up

--- a/src/index.scss
+++ b/src/index.scss
@@ -183,10 +183,6 @@ tr:nth-last-of-type(3) .tooltip-parent-sibling {
     width: 23rem;
 }
 
-td .image-type-cell{
-    cursor: pointer;
-}
-
 td:hover {
     .tooltip-parent {
         display: block !important;
